<resources>
    <string name="app_name">Infusion Template</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_valid_email">Please enter valid email.</string>
    <string name="enter_password">Please enter password.</string>
    <string name="error_enter_password">Password must be 8+ charcters with 1 uppercaese, 1 lowercase and 1 special symbol.</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="profile_first_name">First Name</string>
    <string name="profile_last_name">Last Name</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_address">Address</string>
    <string name="profile_email">Email</string>
    <string name="don_t_have_an_account_create">Don\'t have an account?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="sign_out">Log Out</string>
    <string name="signup">SignUp</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_gender">Select gender</string>
    <string name="hint_phone">Phone</string>
    <string name="register">Register</string>
    <string name="error_first_name">Please enter first name</string>
    <string name="error_last_name">Please enter last name</string>
    <string name="error_enter_email">Please enter email</string>
    <string name="error_select_gender">Please select gender</string>
    <string name="error_valid_phone_number">Please enter valid phone number</string>
    <string name="error_enter_address">Please enter address</string>
    <string name="iconOpenNavigationDrawer">iconOpenNavigationDrawer</string>
    <string name="menuItem">menuItem</string>
    <string name="iconBack">iconBack</string>
    <string name="oops_text">Oops!</string>
    <string name="no_network">No Network</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="something_went_wrong">Something went wrong Please try again.</string>
    <string name="welcome_to_settings">Welcome to settings</string>
    <string name="log_in_now">Log In Now</string>
    <string name="please_login_to_continue_using_our_app">Please login to continue using our app</string>
    <string name="or_connect_with">Or connect with</string>
    <string name="log_in">Log In</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_user_profile">Welcome to User profile</string>
    <string name="wrong_crendentials">Wrong crendentials</string>
    <string name="you_have_entered_wrong_email_or_password">You have entered wrong email or password</string>
    <string name="client_id">602980832199-da60b9fdshqg3gdnsqdkv2ltbu1qeg2p.apps.googleusercontent.com</string>
    <string name="password_should_contain_at_least_8_characters">Password should contain at least 8 characters</string>
    <string name="sign_with_google_successful">Sign with google successful</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="please_fill_the_details_and_create_account">Please fill the details and create account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="third_fragment">Third Fragment</string>
    <string name="add_doctor">Add Doctor</string>
    <string name="hint_doctor_name">Name</string>
    <string name="hint_doctor_email">Email</string>
    <string name="hint_doctor_contact">Contact Number</string>
    <string name="doctor_notification_enable">Doctor Notification Enable</string>
    <string name="submit">Submit</string>
    <string name="enter_valid_name">Enter Valid Name</string>
    <string name="valid_name_desc">Name must have at least 3three characters</string>
    <string name="valid_name_start_with_char">Name should starts with character</string>
    <string name="doctor_save_successfully">Doctor information successfully saved.</string>
    <string name="user_save_successfully">User information successfully saved.</string>
    <string name="doctor_not_save">Doctor information Not saved.</string>
    <string name="user_not_save">User information Not saved.</string>
    <string name="success">Success</string>
    <string name="update_profile_title">Update Profile</string>
    <string name="verify">Verify</string>
    <string name="hint_address">Address</string>
    <string name="hint_degree">Enter Degree</string>
    <string name="hint_speciality">Enter Speciality</string>
    <string name="available_date">Available Date</string>
    <string name="available_time">Available Time</string>
    <string name="check_internet_connection">Please Check your Internet Connection</string>
    <string name="otp_verification">Otp Verification</string>
    <string name="verify_account">Verify Account</string>
    <string name="otp_desc">Thank you for registering with you, please\ntype otp as shared on your mobile\nXXXXXXX%1$s</string>
    <string name="valid_address_desc">Address must have at least three characters</string>
    <string name="select_dob">Select Date of Birth</string>
    <string name="valid_dob_desc">"Date of birth can not be empty"</string>
    <string name="valid_date_desc">Available Date can not be empty</string>
    <string name="valid_time_desc">Available Time can not be empty</string>
    <string name="doctor_update_successfully">Doctor information successfully Updated.</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="complete_profile_desc">Please complete your profile to continue</string>
    <string name="cancel">Cancel</string>
    <string name="verified">Verified</string>
    <string name="verification_email_sent">Verification Email sent successfully</string>
    <string name="doctor_list">Doctor List</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="do_have_an_account">Do you have an account ?</string>
    <string name="user_dashboard">User Dashboard</string>
    <string name="confirm_password_doesn_t_match_try_again">Confirm Password doesn\'t match. Try again!</string>
    <string name="gender">Gender</string>
    <string name="password_doesn_t_match_try_again">Password doesn\'t match. Try again!</string>
    <string name="degree">Degree</string>
    <string name="specialization">Specialization</string>
    <string name="age_validate">Age Should be greater than 22</string>
    <string name="update_doctor">Update Doctor</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_want_to_delete">Are you sure you want to delete?</string>
    <string name="title_appointment">Book an Appointment</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_select_time">Select a time slot</string>
    <string name="nearest_doctor">Nearest doctor</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="specialist">Specialist :</string>
    <string name="label_degree">Degree :</string>
    <string name="view">View</string>
    <string name="search_doctor">Search Doctor</string>
    <string name="appointment">Appointments</string>
    <string name="request">Request</string>
    <string name="doctor_appointment_fragment">Doctor Appointment fragment</string>
    <string name="doctor_request_fragment">Doctor request fragment</string>
    <string name="user_appointment_fragment">User Appointment fragment</string>
    <string name="user_request_fragment">User Request fragment</string>
    <string name="add_holiday">Add Holiday</string>
    <string name="doctor_details">Doctor Details</string>
    <string name="degree_label">Degree </string>
    <string name="specialization_label">Specialization </string>
    <string name="booking">Booking</string>
    <string name="dialog_appointment_desc">Are you sure you want to Booking Appointment?</string>
    <string name="online_booking">Online Booking</string>
    <string name="appointment_booking_success">Appointment Book Successfully</string>
    <string name="appointment_detail">Appointment Details</string>
    <string name="viewAll">ViewAll</string>
    <string name="contact">Contact :</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="add_time">Add Timing</string>
    <string name="confirm">Confirm</string>
    <string name="reject">Reject</string>
    <string name="approve_appointment_desc">Are you sure you want to approve appointment?</string>
    <string name="reject_appointment_desc">Are you sure you want to reject appointment?</string>
    <string name="enter_reason">Enter reason</string>
    <string name="select_week_off">Select WeekOff</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="search">Search</string>
    <string name="my_booking">My booking</string>
    <string name="years_old">Years old</string>
    <string name="approve">Approve</string>
    <string name="email">Email</string>
    <string name="contact_no">Contact no</string>
    <string name="email_verified">Email Verified</string>
    <string name="phone_verified">Phone verified</string>
    <string name="no_appointments_found">No Appointments Found</string>
    <string name="no_data_found">No Data Found</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="end_time_grater">End time must be greater than start time</string>
    <string name="already_selected_time">Already Time is Selected</string>
    <string name="no_doctor_found">No Doctor found</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="status">Status</string>
    <string name="symptoms">Symptoms</string>
    <string name="feedback">Feedback</string>
    <string name="no_booking_found">No booking Found</string>
    <string name="user_doctor_list">User Doctor List</string>
    <string name="symptom_details">Symptom Details</string>
    <string name="number_of_days">Number of Days suffering from</string>
    <string name="valid_doctor_name_desc">Doctor Name must have at least 3three characters</string>
    <string name="valid_doctor_name_start_with_char">Doctor Name should starts with character</string>
    <string name="valid_symptom_desc">Symptom Details must have at least 3three characters</string>
    <string name="valid_symptom_start_with_char">Symptom details should starts with character</string>
    <string name="valid_number_of_days_desc">Please enter number of days form suffering</string>
    <string name="feedback_desc">your feedback is important for us.</string>
    <string name="rate_your_experience">Rate Your Experience</string>
    <string name="anything_else_you_want_to_add">Anything else you want to add?</string>
    <string name="feedback_hint">Tell us more about your overall experience</string>
    <string name="send_feedback">Send feedback</string>
    <string name="update_feedback">Update feedback</string>
</resources>