<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.android.doctorapp.ui.authentication.login.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/parentHorizontalMargin_50"
            android:layout_marginVertical="@dimen/parentVerticalMargin_50"
            tools:context=".ui.authentication.AuthenticationActivity">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/profile_image_dimension"
                android:layout_height="@dimen/profile_image_dimension"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_32"
                android:layout_marginEnd="@dimen/margin_8"
                android:background="@drawable/ic_illustration_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLoginNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_50"
                android:text="@string/log_in_now"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:text="@string/please_login_to_continue_using_our_app"
                android:textColor="@color/grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLoginNow"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/field_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomStart="@dimen/margin_10"
                app:boxCornerRadiusBottomEnd="@dimen/margin_10"
                app:boxCornerRadiusTopEnd="@dimen/margin_10"
                app:boxCornerRadiusTopStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_32"
                app:error="@{viewModel.emailError}"
                app:errorTextColor="@color/purple_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMsg">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text="@={viewModel.email}"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/field_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomStart="@dimen/margin_10"
                app:boxCornerRadiusBottomEnd="@dimen/margin_10"
                app:boxCornerRadiusTopEnd="@dimen/margin_10"
                app:boxCornerRadiusTopStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_10"
                app:error="@{viewModel.passwordError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/field_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="@={viewModel.password}"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/field_email"
                    app:onEditorActionClicked="@{()->viewModel.onClick()}" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_50"
                android:layout_marginTop="@dimen/margin_50"
                android:onClick="@{view -> viewModel.onClick()}"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/field_password"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBottomMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/don_t_have_an_account_create"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintEnd_toStartOf="@+id/tvSignUp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginStart="@dimen/margin_5"
                android:onClick="@{view -> viewModel.onRegisterClick()}"
                android:text="@string/signup"
                android:textColor="@color/blue"
                app:layout_constraintStart_toEndOf="@+id/tvBottomMsg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvConnectWith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/or_connect_with"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvBottomMsg"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnGoogle"
                android:layout_width="@dimen/margin_20"
                android:layout_height="@dimen/margin_20"
                android:src="@drawable/chrome_icon"
                android:layout_marginTop="@dimen/margin_10"
                android:onClick="@{view -> viewModel.onGoogleSignClick()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvConnectWith"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
